syntax = "proto3";

package com.ms.ecommerce.grpc;

service CustomerService {
    rpc FindCustomerById (CustomerRequest) returns (CustomerResponse);
}

message CustomerRequest {
    string id = 1;
}

message CustomerResponse {
    string id = 1;
    string name = 2;
    string email = 3;
}
